moved stuff around

--- a/professional/index.html
+++ b/professional/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel='stylesheet' href='../spectre.min.css'>
-		<link rel='stylesheet' href='../spectre-icons.min.css'>
-		<script src='../aws-sdk-2.660.0.min.js'></script>
-		<script src='../preact.min.js'></script>
+		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
+		<link rel='stylesheet' href='../lib/spectre.min.css'>
+		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
+		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
+		<script src='../lib/preact.min.js'></script>
 		<script src='index.js'></script>
 	</head>
 	<body></body>
