--- a/professional/index.html
+++ b/professional/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
