--- a/professional/index.html
+++ b/professional/index.html
@@ -5,6 +5,7 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
+		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
 		<script src='../lib/preact.min.js'></script>
 		<script src='index.js'></script>
