--- a/professional/index.html
+++ b/professional/index.html
@@ -7,6 +7,7 @@
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
+		<script src='../lib/moment.min.js'></script>
 		<script src='../lib/preact.min.js'></script>
 		<script src='index.js'></script>
 	</head>
