--- a/static/customers/index.html
+++ b/static/customers/index.html
@@ -6,7 +6,9 @@
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
+		<!-- <link rel='stylesheet' href='../lib/mysqpaymentform.css'> -->
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
+		<script src='../lib/paymentform.js'></script>
 		<script src='../lib/preact.min.js'></script>
 		<script src='index.js'></script>
 	</head>
