--- a/customers/index.html
+++ b/customers/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<link rel='stylesheet' href='../lib/stripe.css'>
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
-		<!-- <link rel='stylesheet' href='../lib/mysqpaymentform.css'> -->
+		<script src="https://js.stripe.com/v3/"></script>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
-		<script src='../lib/paymentform.js'></script>
 		<script src='../lib/preact.min.js'></script>
 		<script src='index.js'></script>
 	</head>
