--- a/professional/index.html
+++ b/professional/index.html
@@ -6,9 +6,16 @@
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
 		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
+		<script src="https://js.stripe.com/v3/"></script>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
 		<script src='../lib/moment.min.js'></script>
 		<script src='../lib/preact.min.js'></script>
+		<script type="text/javascript">
+			function getIP(json){
+				IP=json.query
+			}
+		</script>
+		<script type="text/javascript" src='http://ip-api.com/json/?callback=getIP'></script>
 		<script src='index.js'></script>
 	</head>
 	<body></body>
