--- a/professional/error.html
+++ b/professional/error.html
@@ -4,13 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' href='../lib/spectre.min.css'>
-		<link rel='stylesheet' href='../lib/spectre-icons.min.css'>
-		<link rel='stylesheet' href='../lib/spectre-exp.min.css'>
-		<script src="https://js.stripe.com/v3/"></script>
 		<script src='../lib/aws-sdk-2.660.0.min.js'></script>
-		<script src='../lib/moment.min.js'></script>
 		<script src='../lib/preact.min.js'></script>
-		<script src='index.js'></script>
+		<script src='error.js'></script>
 	</head>
 	<body></body>
 </html>
