--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' href='lib/spectre.min.css'/>
 		<script src='lib/preact.min.js'></script>
 		<script src='index.js'></script>
